# RAG

./: .gitignore  ADVANCED_RAG_2025.md  ADVANCED_RAG_FEATURES.md  CLINICAL_PROMPTS.md  NEO4J_DISABLED.md  NEO4J_RAG_FLOW.md  OPENAI_INTEGRATION_SUMMARY.md  README.md  README_EVALUATION.md  README_OLLAMA.md  auto_neo4j_builder.py  compare_models.py  debug_search.py  evaluate_rag.py  evaluation_data.json  graph_rag.py  kg_builder.py  load_medical_docs.py  main.py  ollama_rag.py  pyproject.toml  requirements.txt  test_graph_rag.py  test_hybrid_rag.py  test_medical_accuracy.py  test_plotting.py  test_rag.py
app/: embedding_runner.py  hashing.py  ocr_runner.py  ollama_embeddings.py  ollama_search.py  verify.py
data/parsed/1. ASPEN Fluids and electrolytes/: 1. ASPEN Fluids and electrolytes.md  1. ASPEN Fluids and electrolytes.rmd  1_aspen_fluids_and_electrolytes__5dab52.index.json
data/parsed/10_EnteralFeeding/: 10_EnteralFeeding.md  10_EnteralFeeding.rmd  10_enteralfeeding__42e0c2.index.json
data/parsed/10_OrganFunctionComplicationsofNutritionSupport/: 10_OrganFunctionComplicationsofNutritionSupport.md  10_OrganFunctionComplicationsofNutritionSupport.rmd  10_organfunctioncomplicationsofnutritionsupport__49c3dd.index.json
data/parsed/11_OngoingMonitoringofNutritionSupport/: 11_OngoingMonitoringofNutritionSupport.md  11_OngoingMonitoringofNutritionSupport.rmd  11_ongoingmonitoringofnutritionsupport__48ffae.index.json
data/parsed/12_ErrorReportingSystem/: 12_ErrorReportingSystem.md  12_ErrorReportingSystem.rmd  12_errorreportingsystem__39d401.index.json
data/parsed/1PN Overview/: 1PN Overview.md  1PN Overview.rmd  1pn_overview__e35dc2.index.json
data/parsed/1_IncorporatingNutritioninTherapeuticPlanofCare/: 1_IncorporatingNutritioninTherapeuticPlanofCare.md  1_IncorporatingNutritioninTherapeuticPlanofCare.rmd  (+1 more)
eval/: ANSWER_COMPARISON_ANALYSIS.md  OPENAI_SETUP.md  README.md  REPRODUCIBILITY_GUIDE.md  baseline_model_evaluation.py  mcq_original_extracted.csv  tpn_eval_questions.csv  tpn_mcq_cleaned.csv  tpn_mcq_final.csv  tpn_mcq_questions.csv  tpn_mcq_questions_clean.csv  tpn_rag_evaluation.py
ocr_pipeline/: config.py  main.py  pdf_info.py  save_utils.py  search.py
scripts/: build_tpn_knowledge_graph.py  test_ocr_api.py
src/rag/api/: main.py  (+1 more)
(+156 files in other folders)
