[project]
name = "document-rag"
version = "2.0.0"
description = "Modern Document RAG System with Mistral OCR Pipeline"
authors = [{name = "RAG Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core FastAPI and web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Data models and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP client for external APIs
    "httpx>=0.25.0",
    # PDF processing (preserve OCR pipeline)
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "mistralai>=1.0.0",
    # Vector storage and embeddings
    "chromadb>=0.5.0",
    "numpy>=1.24.0",
    # Modern LangChain integration for advanced RAG
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-neo4j>=0.1.0",
    "langgraph>=0.1.0",
    # Document processing and chunking
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "unstructured>=0.15.0",
    # Advanced text processing
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "tiktoken>=0.7.0",
    # Advanced RAG improvements (2025 best practices)
    "sentence-transformers>=2.5.0",  # For cross-encoder reranking
    "rank-bm25>=0.2.2",  # For BM25 fusion retrieval
    "flashrank>=0.2.0",  # Fast cross-encoder reranking
    # Knowledge graphs (optional, for future)
    "neo4j>=5.15.0",
    # Utilities
    "python-slugify>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0", # Better logging and console output
    # Evaluation and testing
    "ragas>=0.3.0",
    "pandas>=2.0.0",
    "openai>=1.109.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "I", "N", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
